--- a/data/ansible/drone/main.yaml
+++ b/data/ansible/drone/main.yaml
@@ -254,6 +254,7 @@
         docker rm drone;
         docker stop runner;
         docker rm runner;
+      ignore_errors: true
 
 
     - name:  Start drone
