more settings for drone and changed mailer image in drone.yml

--- a/.drone.yml
+++ b/.drone.yml
@@ -13,7 +13,7 @@ steps:
   - ./test.sh
 - name: notify
   pull: never
-  image: drillster/drone-email
+  image: trial97/drone-email
   settings:
     from: arber.katellari@itsyscom.com
     host: smtp.gmail.com
