--- a/data/ansible/drone/main.yaml
+++ b/data/ansible/drone/main.yaml
@@ -24,8 +24,8 @@
     #################################################################
     drone_dir: "/home/{{ user }}/go/src/github.com/drone/drone"
 
-    drone_server_host: 6126-193-163-187-149.eu.ngrok.io
-    drone_validate_plugin_endpoint: 127.0.0.1:3001
+    drone_server_host: 4d61-193-163-187-150.eu.ngrok.io
+    drone_validate_plugin_endpoint: https://4d61-193-163-187-150.eu.ngrok.io:3000
     docker_runner_capacity: 20
 
     drone_user_create: meganime
