--- a/data/ansible/drone/main.yaml
+++ b/data/ansible/drone/main.yaml
@@ -223,10 +223,10 @@
       shell: "openssl rand -hex 16"
       register: drone_token
 
-    - name: export server config
-      template:
-        src: .env.j2
-        dest: /home/{{ user }}/.env
+    # - name: export server config
+      # template:
+      #   src: .env.j2
+      #   dest: /home/{{ user }}/.env
     
     - name: start validate plugin
       shell: "droneAuth -secret={{ drone_secret.stdout }} -cfg=/home/{{ user }}/users.json -endpoint={{ drone_validate_plugin_endpoint }}>/dev/null 2>&1 &"
@@ -235,18 +235,18 @@
       environment:
         PATH: "{{ lookup('env','PATH') }}:{{ golang_gopath }}/bin:/usr/local/go/bin:{{ ansible_env.PATH }}"
     
-    - name: start drone-server
-      become: yes
-      shell: "drone-server --env-file=/home/{{ user }}/.env >/home/{{ user }}/drone.log 2>&1 &"
-      async: 10
-      poll: 0
-      environment:
-        PATH: "{{ lookup('env','PATH') }}:{{ golang_gopath }}/bin:/usr/local/go/bin:{{ ansible_env.PATH }}"
-    
-    # - name: Check if drone is running
+    # - name: start drone-server
     #   become: yes
-    #   shell: docker container ls -q -f="name=drone"
-    #   register: continerList3
+    #   shell: "drone-server --env-file=/home/{{ user }}/.env >/home/{{ user }}/drone.log 2>&1 &"
+    #   async: 10
+    #   poll: 0
+    #   environment:
+    #     PATH: "{{ lookup('env','PATH') }}:{{ golang_gopath }}/bin:/usr/local/go/bin:{{ ansible_env.PATH }}"
+    
+    - name: Check if drone is running
+      become: yes
+      shell: docker container ls -q -f="name=drone"
+      register: continerList3
 
     - name: Remove previous containers
       become: yes
@@ -258,29 +258,29 @@
       ignore_errors: true
 
 
-    # - name:  Start drone
-    #   become: yes
-    #   shell: >
-    #     docker run \
-    #       --volume=/var/lib/drone:/data \
-    #       --env=DRONE_GITHUB_CLIENT_ID={{ drone_github_client_id }} \
-    #       --env=DRONE_GITHUB_CLIENT_SECRET={{ drone_github_client_secret }} \
-    #       --env=DRONE_RPC_SECRET={{ drone_secret.stdout }} \
-    #       --env=DRONE_SERVER_HOST={{ drone_server_host }} \
-    #       --env=DRONE_SERVER_PROTO=https \
-    #       --env=DRONE_SERVER_PROXY_PROTO=https \
-    #       --env=DRONE_VALIDATE_PLUGIN_ENDPOINT=http://{{ drone_validate_plugin_endpoint }} \
-    #       --env=DRONE_VALIDATE_PLUGIN_SECRET={{ drone_secret.stdout }}  \
-    #       --env=DRONE_USER_CREATE=username:{{ drone_user_create }},admin:true,token:{{ drone_token.stdout }} \
-    #       --env=DRONE_USER_FILTER={{ drone_user_filter }} \
-    #       --env=DRONE_LOGS_DEBUG=true \
-    #       --publish=80:80 \
-    #       --publish=443:443 \
-    #       --restart=always \
-    #       --detach=true \
-    #       --name=drone \
-    #       drone/drone:2
-    #   when: continerList3.stdout_lines|length == 0
+    - name:  Start drone
+      become: yes
+      shell: >
+        docker run \
+          --volume=/var/lib/drone:/data \
+          --env=DRONE_GITHUB_CLIENT_ID={{ drone_github_client_id }} \
+          --env=DRONE_GITHUB_CLIENT_SECRET={{ drone_github_client_secret }} \
+          --env=DRONE_RPC_SECRET={{ drone_secret.stdout }} \
+          --env=DRONE_SERVER_HOST={{ drone_server_host }} \
+          --env=DRONE_SERVER_PROTO=https \
+          --env=DRONE_SERVER_PROXY_PROTO=https \
+          --env=DRONE_VALIDATE_PLUGIN_ENDPOINT=http://{{ drone_validate_plugin_endpoint }} \
+          --env=DRONE_VALIDATE_PLUGIN_SECRET={{ drone_secret.stdout }}  \
+          --env=DRONE_USER_CREATE=username:{{ drone_user_create }},admin:true,token:{{ drone_token.stdout }} \
+          --env=DRONE_USER_FILTER={{ drone_user_filter }} \
+          --env=DRONE_LOGS_DEBUG=true \
+          --publish=80:80 \
+          --publish=443:443 \
+          --restart=always \
+          --detach=true \
+          --name=drone \
+          drone/drone:2
+      when: continerList3.stdout_lines|length == 0
 
     - name: Check if drone-runner is running
       become: yes
