--- a/.drone.yml
+++ b/.drone.yml
@@ -6,14 +6,14 @@ workspace:
   path: /cgrates
 
 steps:
-- name: unit
-  pull: never
-  image: cgrates-integration
-  commands:
-  - go test ./utils
+# - name: unit
+#   pull: never
+#   image: cgrates-integration
+#   commands:
+#   - go test ./utils
 - name: notify
   pull: never
-  image: trial97/drone-email
+  image: drillster/drone-email
   settings:
     from: arber.katellari@itsyscom.com
     host: smtp.gmail.com
