--- a/.drone.yml
+++ b/.drone.yml
@@ -15,7 +15,7 @@ steps:
   pull: never
   image: drillster/drone-email
   settings:
-    from: noreply@gmail.com
+    from: arber.katellari@itsyscom.com
     host: smtp.gmail.com
     username:
       from_secret: email_username
