not fixed email username is wrong

--- a/.drone.yml
+++ b/.drone.yml
@@ -21,7 +21,7 @@ steps:
     password: 
       from_secret: email_password
     recipients:
-      - arber.katellari@itsyscom.com
+      - arber0katellari@gmail.com
   when:
       status:
       - success
