--- a/.drone.yml
+++ b/.drone.yml
@@ -20,6 +20,19 @@ steps:
       from_secret: email_username
     password: 
       from_secret: email_password
+    subject: >
+      [{{ build.status }}]
+      {{ repo.owner }}/{{ repo.name }}
+      ({{ commit.branch }})
+    body: >
+      Build number: # {{ build.number }}
+      Build link: {{ build.link }}
+      Build started: {{ build.started }}
+      Build ended: {{ build.finished }}
+      Commit author: {{ commit.author.name }}
+      Commit message: {{ commit.message }}
+      Commit branch: {{ commit.branch }}
+      Commit link: {{ commit.link }}
     recipients:
       - morganfreeman005@gmail.com
   when:
