--- a/data/ansible/drone/main.yaml
+++ b/data/ansible/drone/main.yaml
@@ -178,31 +178,31 @@
       args:
         chdir: '{{ cgrates_dir }}/data/docker/integration'
 
-    # - name: create drone directory
-    #   become: yes
-    #   file:
-    #     state: directory
-    #     mode: 'u=rwx,go=rx'
-    #     owner: "{{ user }}"
-    #     group: "{{ user }}"
-    #     dest: '{{ drone_dir }}'
-    #   become_user: "{{ user }}"
+    - name: create drone directory
+      become: yes
+      file:
+        state: directory
+        mode: 'u=rwx,go=rx'
+        owner: "{{ user }}"
+        group: "{{ user }}"
+        dest: '{{ drone_dir }}'
+      become_user: "{{ user }}"
 
-    # - name: git clone drone
-    #   git:
-    #     repo: https://github.com/drone/drone.git
-    #     dest: '{{ drone_dir }}'
-    #     update: yes
-    #     force: yes
-    #   become: yes
-    #   become_user: "{{ user }}"
+    - name: git clone drone
+      git:
+        repo: https://github.com/drone/drone.git
+        dest: '{{ drone_dir }}'
+        update: yes
+        force: yes
+      become: yes
+      become_user: "{{ user }}"
 
-    # - name: build drone
-    #   shell: "go install github.com/drone/drone/cmd/drone-server"
-    #   environment:
-    #     PATH: "{{ lookup('env','PATH') }}:{{ golang_gopath }}/bin:/usr/local/go/bin:{{ ansible_env.PATH }}"
-    #   args:
-    #     chdir: '{{ drone_dir }}'
+    - name: build drone
+      shell: "go install github.com/drone/drone/cmd/drone-server"
+      environment:
+        PATH: "{{ lookup('env','PATH') }}:{{ golang_gopath }}/bin:/usr/local/go/bin:{{ ansible_env.PATH }}"
+      args:
+        chdir: '{{ drone_dir }}'
 
     - name: install validate plugin
       shell: "go install github.com/Trial97/droneAuth@latest"
