--- a/.drone.yml
+++ b/.drone.yml
@@ -38,3 +38,222 @@ steps:
   when:
       status:
       - failure
+
+kind: pipeline
+type: docker
+name: unit
+
+
+workspace:
+  path: /cgrates
+
+steps:
+- name: unit
+  pull: never
+  image: cgrates-integration
+  commands:
+
+  - go test ./utils
+- name: notify
+  pull: never
+  image: drillster/drone-email
+  settings:
+    from: arber.katellari@itsyscom.com
+    host: smtp.gmail.com
+    username: 
+      from_secret: email_username
+    password:
+      from_secret: email_password
+    subject: >
+      [{{ build.status }}]
+      {{ repo.owner }}/{{ repo.name }}
+      ({{ commit.branch }})
+    body: >
+      Build number: # {{ build.number }}
+      Build link: {{ build.link }}
+      Build started: {{ build.started }}
+      Build ended: {{ build.finished }}
+      Commit author: {{ commit.author.name }}
+      Commit message: {{ commit.message }}
+      Commit branch: {{ commit.branch }}
+      Commit link: {{ commit.link }}
+    recipients:
+      - morganfreeman005@gmail.com
+  when:
+    status: failure
+
+---
+kind: pipeline
+type: docker
+name: integration-internal
+
+
+workspace:
+  path: /cgrates
+
+steps:
+- name: integration-internal
+  pull: never
+  image: cgrates-integration
+  commands:
+
+  - ./integration_test.sh -dbtype=*internal
+- name: notify
+  pull: never
+  image: drillster/drone-email
+  settings:
+    from: arber.katellari@itsyscom.com
+    host: smtp.gmail.com
+    username: 
+      from_secret: email_username
+    password:
+      from_secret: email_password
+    subject: >
+      [{{ build.status }}]
+      {{ repo.owner }}/{{ repo.name }}
+      ({{ commit.branch }})
+    body: >
+      Build number: # {{ build.number }}
+      Build link: {{ build.link }}
+      Build started: {{ build.started }}
+      Build ended: {{ build.finished }}
+      Commit author: {{ commit.author.name }}
+      Commit message: {{ commit.message }}
+      Commit branch: {{ commit.branch }}
+      Commit link: {{ commit.link }}
+    recipients:
+      - morganfreeman005@gmail.com
+  when:
+    status: failure 
+
+---
+kind: pipeline
+type: docker
+name: integration-mysql
+
+
+workspace:
+  path: /cgrates
+
+steps:
+- name: integration-mysql
+  pull: never
+  image: cgrates-integration
+  commands:
+
+  - ./integration_test.sh -dbtype=*mysql
+- name: notify
+  pull: never
+  image: drillster/drone-email
+  settings:
+    from: arber.katellari@itsyscom.com
+    host: smtp.gmail.com
+    username: 
+      from_secret: email_username
+    password:
+      from_secret: email_password
+    subject: >
+      [{{ build.status }}]
+      {{ repo.owner }}/{{ repo.name }}
+      ({{ commit.branch }})
+    body: >
+      Build number: # {{ build.number }}
+      Build link: {{ build.link }}
+      Build started: {{ build.started }}
+      Build ended: {{ build.finished }}
+      Commit author: {{ commit.author.name }}
+      Commit message: {{ commit.message }}
+      Commit branch: {{ commit.branch }}
+      Commit link: {{ commit.link }}
+    recipients:
+      - morganfreeman005@gmail.com
+  when:
+    status: failure
+
+---
+kind: pipeline
+type: docker
+name: integration-mongo
+
+
+workspace:
+  path: /cgrates
+
+steps:
+- name: integration-mongo
+  pull: never
+  image: cgrates-integration
+  commands:
+
+  - ./integration_test.sh -dbtype=*mongo
+- name: notify
+  pull: never
+  image: drillster/drone-email
+  settings:
+    from: arber.katellari@itsyscom.com
+    host: smtp.gmail.com
+    username: 
+      from_secret: email_username
+    password:
+      from_secret: email_password
+    subject: >
+      [{{ build.status }}]
+      {{ repo.owner }}/{{ repo.name }}
+      ({{ commit.branch }})
+    body: >
+      Build number: # {{ build.number }}
+      Build link: {{ build.link }}
+      Build started: {{ build.started }}
+      Build ended: {{ build.finished }}
+      Commit author: {{ commit.author.name }}
+      Commit message: {{ commit.message }}
+      Commit branch: {{ commit.branch }}
+      Commit link: {{ commit.link }}
+    recipients:
+      - morganfreeman005@gmail.com
+  when:
+    status: failure
+
+---
+kind: pipeline
+type: docker
+name: integration-postgres
+
+
+workspace:
+  path: /cgrates
+
+steps:
+- name: integration-postgres
+  pull: never
+  image: cgrates-integration
+  commands:
+
+  - ./integration_test.sh -dbtype=*postgres
+- name: notify
+  pull: never
+  image: drillster/drone-email
+  settings:
+    from: arber.katellari@itsyscom.com
+    host: smtp.gmail.com
+    username: 
+      from_secret: email_username
+    password:
+      from_secret: email_password
+    subject: >
+      [{{ build.status }}]
+      {{ repo.owner }}/{{ repo.name }}
+      ({{ commit.branch }})
+    body: >
+      Build number: # {{ build.number }}
+      Build link: {{ build.link }}
+      Build started: {{ build.started }}
+      Build ended: {{ build.finished }}
+      Commit author: {{ commit.author.name }}
+      Commit message: {{ commit.message }}
+      Commit branch: {{ commit.branch }}
+      Commit link: {{ commit.link }}
+    recipients:
+      - morganfreeman005@gmail.com
+  when:
+    status: failure
