--- a/.drone.yml
+++ b/.drone.yml
@@ -11,7 +11,7 @@ steps:
   image: cgrates-integration
   commands:
   - go test ./utils
-
+  failure: ignore
 - name: notify
   image: drillster/drone-email
   settings:
@@ -36,186 +36,184 @@ steps:
       Commit link: {{ commit.link }}
     recipients:
       - morganfreeman005@gmail.com
-  when:
-      status:
-      - failure
-
----
-kind: pipeline
-type: docker
-name: integration-internal
 
 
-workspace:
-  path: /cgrates
-
-steps:
-- name: integration-internal
-  pull: never
-  image: cgrates-integration
-  commands:
-
-  - ./integration_test.sh -dbtype=*internal
-  failure: ignore
-- name: notify
-  pull: never
-  image: drillster/drone-email
-  settings:
-    from: arber.katellari@itsyscom.com
-    host: smtp.gmail.com
-    username: 
-      from_secret: email_username
-    password:
-      from_secret: email_password
-    subject: >
-      [{{ build.status }}]
-      {{ repo.owner }}/{{ repo.name }}
-      ({{ commit.branch }})
-    body: >
-      Build number: # {{ build.number }}
-      Build link: {{ build.link }}
-      Build started: {{ build.started }}
-      Build ended: {{ build.finished }}
-      Commit author: {{ commit.author.name }}
-      Commit message: {{ commit.message }}
-      Commit branch: {{ commit.branch }}
-      Commit link: {{ commit.link }}
-    recipients:
-      - morganfreeman005@gmail.com
-  when:
-    status: failure 
-
----
-kind: pipeline
-type: docker
-name: integration-mysql
+# ---
+# kind: pipeline
+# type: docker
+# name: integration-internal
 
 
-workspace:
-  path: /cgrates
+# workspace:
+#   path: /cgrates
 
-steps:
-- name: integration-mysql
-  pull: never
-  image: cgrates-integration
-  commands:
+# steps:
+# - name: integration-internal
+#   pull: never
+#   image: cgrates-integration
+#   commands:
 
-  - ./integration_test.sh -dbtype=*mysql
-  failure: ignore
-- name: notify
-  pull: never
-  image: drillster/drone-email
-  settings:
-    from: arber.katellari@itsyscom.com
-    host: smtp.gmail.com
-    username: 
-      from_secret: email_username
-    password:
-      from_secret: email_password
-    subject: >
-      [{{ build.status }}]
-      {{ repo.owner }}/{{ repo.name }}
-      ({{ commit.branch }})
-    body: >
-      Build number: # {{ build.number }}
-      Build link: {{ build.link }}
-      Build started: {{ build.started }}
-      Build ended: {{ build.finished }}
-      Commit author: {{ commit.author.name }}
-      Commit message: {{ commit.message }}
-      Commit branch: {{ commit.branch }}
-      Commit link: {{ commit.link }}
-    recipients:
-      - morganfreeman005@gmail.com
-  when:
-    status: failure
+#   - ./integration_test.sh -dbtype=*internal
+#   failure: ignore
+# - name: notify
+#   pull: never
+#   image: drillster/drone-email
+#   settings:
+#     from: arber.katellari@itsyscom.com
+#     host: smtp.gmail.com
+#     username: 
+#       from_secret: email_username
+#     password:
+#       from_secret: email_password
+#     subject: >
+#       [{{ build.status }}]
+#       {{ repo.owner }}/{{ repo.name }}
+#       ({{ commit.branch }})
+#     body: >
+#       Build number: # {{ build.number }}
+#       Build link: {{ build.link }}
+#       Build started: {{ build.started }}
+#       Build ended: {{ build.finished }}
+#       Commit author: {{ commit.author.name }}
+#       Commit message: {{ commit.message }}
+#       Commit branch: {{ commit.branch }}
+#       Commit link: {{ commit.link }}
+#     recipients:
+#       - morganfreeman005@gmail.com
+#   when:
+#     status: failure 
 
----
-kind: pipeline
-type: docker
-name: integration-mongo
-
-
-workspace:
-  path: /cgrates
-
-steps:
-- name: integration-mongo
-  pull: never
-  image: cgrates-integration
-  commands:
-
-  - ./integration_test.sh -dbtype=*mongo
-  failure: ignore
-- name: notify
-  pull: never
-  image: drillster/drone-email
-  settings:
-    from: arber.katellari@itsyscom.com
-    host: smtp.gmail.com
-    username: 
-      from_secret: email_username
-    password:
-      from_secret: email_password
-    subject: >
-      [{{ build.status }}]
-      {{ repo.owner }}/{{ repo.name }}
-      ({{ commit.branch }})
-    body: >
-      Build number: # {{ build.number }}
-      Build link: {{ build.link }}
-      Build started: {{ build.started }}
-      Build ended: {{ build.finished }}
-      Commit author: {{ commit.author.name }}
-      Commit message: {{ commit.message }}
-      Commit branch: {{ commit.branch }}
-      Commit link: {{ commit.link }}
-    recipients:
-      - morganfreeman005@gmail.com
-  when:
-    status: failure
-
----
-kind: pipeline
-type: docker
-name: integration-postgres
+# ---
+# kind: pipeline
+# type: docker
+# name: integration-mysql
 
 
-workspace:
-  path: /cgrates
+# workspace:
+#   path: /cgrates
 
-steps:
-- name: integration-postgres
-  pull: never
-  image: cgrates-integration
-  commands:
+# steps:
+# - name: integration-mysql
+#   pull: never
+#   image: cgrates-integration
+#   commands:
 
-  - ./integration_test.sh -dbtype=*postgres
-  failure: ignore
-- name: notify
-  pull: never
-  image: drillster/drone-email
-  settings:
-    from: arber.katellari@itsyscom.com
-    host: smtp.gmail.com
-    username: 
-      from_secret: email_username
-    password:
-      from_secret: email_password
-    subject: >
-      [{{ build.status }}]
-      {{ repo.owner }}/{{ repo.name }}
-      ({{ commit.branch }})
-    body: >
-      Build number: # {{ build.number }}
-      Build link: {{ build.link }}
-      Build started: {{ build.started }}
-      Build ended: {{ build.finished }}
-      Commit author: {{ commit.author.name }}
-      Commit message: {{ commit.message }}
-      Commit branch: {{ commit.branch }}
-      Commit link: {{ commit.link }}
-    recipients:
-      - morganfreeman005@gmail.com
-  when:
-    status: failure
+#   - ./integration_test.sh -dbtype=*mysql
+#   failure: ignore
+# - name: notify
+#   pull: never
+#   image: drillster/drone-email
+#   settings:
+#     from: arber.katellari@itsyscom.com
+#     host: smtp.gmail.com
+#     username: 
+#       from_secret: email_username
+#     password:
+#       from_secret: email_password
+#     subject: >
+#       [{{ build.status }}]
+#       {{ repo.owner }}/{{ repo.name }}
+#       ({{ commit.branch }})
+#     body: >
+#       Build number: # {{ build.number }}
+#       Build link: {{ build.link }}
+#       Build started: {{ build.started }}
+#       Build ended: {{ build.finished }}
+#       Commit author: {{ commit.author.name }}
+#       Commit message: {{ commit.message }}
+#       Commit branch: {{ commit.branch }}
+#       Commit link: {{ commit.link }}
+#     recipients:
+#       - morganfreeman005@gmail.com
+#   when:
+#     status: failure
+
+# ---
+# kind: pipeline
+# type: docker
+# name: integration-mongo
+
+
+# workspace:
+#   path: /cgrates
+
+# steps:
+# - name: integration-mongo
+#   pull: never
+#   image: cgrates-integration
+#   commands:
+
+#   - ./integration_test.sh -dbtype=*mongo
+#   failure: ignore
+# - name: notify
+#   pull: never
+#   image: drillster/drone-email
+#   settings:
+#     from: arber.katellari@itsyscom.com
+#     host: smtp.gmail.com
+#     username: 
+#       from_secret: email_username
+#     password:
+#       from_secret: email_password
+#     subject: >
+#       [{{ build.status }}]
+#       {{ repo.owner }}/{{ repo.name }}
+#       ({{ commit.branch }})
+#     body: >
+#       Build number: # {{ build.number }}
+#       Build link: {{ build.link }}
+#       Build started: {{ build.started }}
+#       Build ended: {{ build.finished }}
+#       Commit author: {{ commit.author.name }}
+#       Commit message: {{ commit.message }}
+#       Commit branch: {{ commit.branch }}
+#       Commit link: {{ commit.link }}
+#     recipients:
+#       - morganfreeman005@gmail.com
+#   when:
+#     status: failure
+
+# ---
+# kind: pipeline
+# type: docker
+# name: integration-postgres
+
+
+# workspace:
+#   path: /cgrates
+
+# steps:
+# - name: integration-postgres
+#   pull: never
+#   image: cgrates-integration
+#   commands:
+
+#   - ./integration_test.sh -dbtype=*postgres
+#   failure: ignore
+# - name: notify
+#   pull: never
+#   image: drillster/drone-email
+#   settings:
+#     from: arber.katellari@itsyscom.com
+#     host: smtp.gmail.com
+#     username: 
+#       from_secret: email_username
+#     password:
+#       from_secret: email_password
+#     subject: >
+#       [{{ build.status }}]
+#       {{ repo.owner }}/{{ repo.name }}
+#       ({{ commit.branch }})
+#     body: >
+#       Build number: # {{ build.number }}
+#       Build link: {{ build.link }}
+#       Build started: {{ build.started }}
+#       Build ended: {{ build.finished }}
+#       Commit author: {{ commit.author.name }}
+#       Commit message: {{ commit.message }}
+#       Commit branch: {{ commit.branch }}
+#       Commit link: {{ commit.link }}
+#     recipients:
+#       - morganfreeman005@gmail.com
+#   when:
+#     status: failure
