--- a/.drone.yml
+++ b/.drone.yml
@@ -11,7 +11,6 @@ steps:
   image: cgrates-integration
   commands:
   - go test ./utils
-  failure: ignore
 - name: notify
   image: drillster/drone-email
   settings:
@@ -36,7 +35,8 @@ steps:
       Commit link: {{ commit.link }}
     recipients:
       - morganfreeman005@gmail.com
-
+  when:
+    status: failure
 
 # ---
 # kind: pipeline
