--- a/data/ansible/drone/main.yaml
+++ b/data/ansible/drone/main.yaml
@@ -24,8 +24,8 @@
     #################################################################
     drone_dir: "/home/{{ user }}/go/src/github.com/drone/drone"
 
-    # drone_server_host: a4bd-193-163-187-149.eu.ngrok.io
-    # drone_validate_plugin_endpoint: a4bd-193-163-187-149.eu.ngrok.io:3000
+    
+    # drone_validate_plugin_endpoint: //public address here
     docker_runner_capacity: 20
 
     drone_user_create: meganime
@@ -204,6 +204,8 @@
     #   args:
     #     chdir: '{{ drone_dir }}'
 
+
+    #   used to restrict build access
     # - name: install validate plugin
     #   shell: "go install github.com/Trial97/droneAuth@latest"
     #   environment:
