--- a/.drone.yml
+++ b/.drone.yml
@@ -10,6 +10,7 @@ steps:
   pull: never
   image: cgrates-integration
   commands:
+  - docker-entrypoint.sh
   - go test ./utils
 - name: notify
   image: drillster/drone-email
