--- a/data/ansible/drone/main.yaml
+++ b/data/ansible/drone/main.yaml
@@ -74,7 +74,7 @@
 
 ###########################################################################################################################
 ###########################################################################################################################
-    - name:  add secrets
+    - name:  listS secrets
       become: yes
       shell: |
         drone-cli orgsecret ls;
