--- a/data/ansible/drone/main.yaml
+++ b/data/ansible/drone/main.yaml
@@ -223,16 +223,6 @@
     - name:  generate token
       shell: "openssl rand -hex 16"
       register: drone_token
-
-    # - name:  list secrets
-    #   become: yes
-    #   shell: |
-    #     drone-cli orgsecret ls;
-    #   environment:
-    #     PATH: "{{ lookup('env','PATH') }}:{{ golang_gopath }}/bin:/usr/local/go/bin:{{ ansible_env.PATH }}"
-    #     DRONE_SERVER: "https://{{ drone_server_host }}"
-    #     DRONE_TOKEN: "{{ drone_token.stdout }}"
-    #   with_items: '{{ drone_user_filter }}'
       
     # - name: export server config
       # template:
@@ -304,6 +294,11 @@
       become: yes
       shell: docker run -d -v /var/run/docker.sock:/var/run/docker.sock -e DRONE_RPC_PROTO="https" -e DRONE_RPC_HOST="{{ drone_server_host }}" -e DRONE_RPC_SECRET="{{ drone_secret.stdout }}" -e DRONE_RUNNER_CAPACITY={{ docker_runner_capacity }} -e DRONE_RUNNER_NAME=cgrates -p 3000:3000 --restart always --name runner drone/drone-runner-docker:1
 
+
+    - name:  list secrets
+      become: yes
+      shell: drone orgsecret ls
+      
     # - name: Creating credentials file
     #   copy:
     #     dest: "/home/{{ user }}/credentials.json"
