--- a/data/ansible/drone/main.yaml
+++ b/data/ansible/drone/main.yaml
@@ -297,7 +297,8 @@
 
     - name:  list secrets
       become: yes
-      shell: drone-cli orgsecret ls
+      shell: |
+        drone-cli orgsecret ls;
       
     # - name: Creating credentials file
     #   copy:
