--- a/data/ansible/drone/main.yaml
+++ b/data/ansible/drone/main.yaml
@@ -301,17 +301,39 @@
         export DRONE_SERVER=https://{{ drone_server_host }};
         export DRONE_TOKEN={{ drone_token.stdout }};
 
-    - name:  rm gapi secrets
+    - name: check existing orgsecrets
+      become: yes
+      shell: |
+        drone-cli orgsecret ls;
+      register: ls_orgsecrets
+      environment:
+        PATH: "{{ lookup('env','PATH') }}:{{ golang_gopath }}/bin:/usr/local/go/bin:{{ ansible_env.PATH }}"
+        DRONE_SERVER: "https://{{ drone_server_host }}"
+        DRONE_TOKEN: "{{ drone_token.stdout }}"
+      with_items: '{{ drone_user_filter }}'
+
+      - name:  rm gapi secrets
       become: yes
       shell: |
         drone-cli orgsecret rm {{ item }} credentials;
+      environment:
+        PATH: "{{ lookup('env','PATH') }}:{{ golang_gopath }}/bin:/usr/local/go/bin:{{ ansible_env.PATH }}"
+        DRONE_SERVER: "https://{{ drone_server_host }}"
+        DRONE_TOKEN: "{{ drone_token.stdout }}"
+      with_items: '{{ drone_user_filter }}'
+      when: '"credentials" in ls_orgsecrets'
+
+    - name:  rm gapi secrets
+      become: yes
+      shell: |
         drone-cli orgsecret rm {{ item }} token;
       environment:
         PATH: "{{ lookup('env','PATH') }}:{{ golang_gopath }}/bin:/usr/local/go/bin:{{ ansible_env.PATH }}"
         DRONE_SERVER: "https://{{ drone_server_host }}"
         DRONE_TOKEN: "{{ drone_token.stdout }}"
       with_items: '{{ drone_user_filter }}'
-      ignore_errors: True
+      when: '"token" in ls_orgsecrets'
+
 
     - name:  add gapi secrets
       become: yes
