--- a/data/ansible/drone/main.yaml
+++ b/data/ansible/drone/main.yaml
@@ -311,6 +311,11 @@
         DRONE_TOKEN: "{{ drone_token.stdout }}"
       with_items: '{{ drone_user_filter }}'
       register: ls_orgsecrets
+    - set_fact:
+        string_to_echo: "{{ ls_orgsecrets.stdout }}"
+
+    - name: echo ls orgsecret
+      shell: echo string_to_echo
 
     - name:  rm gapi credentials
       become: yes
@@ -321,7 +326,7 @@
         DRONE_SERVER: "https://{{ drone_server_host }}"
         DRONE_TOKEN: "{{ drone_token.stdout }}"
       with_items: '{{ drone_user_filter }}'
-      when: '"credentials" in ls_orgsecrets'
+      when: '"credentials" in string_to_echo'
 
     - name:  rm gapi token
       become: yes
@@ -332,7 +337,7 @@
         DRONE_SERVER: "https://{{ drone_server_host }}"
         DRONE_TOKEN: "{{ drone_token.stdout }}"
       with_items: '{{ drone_user_filter }}'
-      when: '"token" in ls_orgsecrets'
+      when: '"token" in string_to_echo'
 
 
     - name:  add gapi secrets
