--- a/data/ansible/drone/main.yaml
+++ b/data/ansible/drone/main.yaml
@@ -310,12 +310,10 @@
         DRONE_SERVER: "https://{{ drone_server_host }}"
         DRONE_TOKEN: "{{ drone_token.stdout }}"
       with_items: '{{ drone_user_filter }}'
-      register: ls_orgsecrets
-    - set_fact:
-        string_to_echo: "{{ ls_orgsecrets.stdout_lines }}"
+      register: lsorgscrt
 
     - name: echo ls orgsecret
-      shell: echo string_to_echo
+      shell: echo lsorgscrt
 
     - name:  rm gapi credentials
       become: yes
@@ -326,7 +324,7 @@
         DRONE_SERVER: "https://{{ drone_server_host }}"
         DRONE_TOKEN: "{{ drone_token.stdout }}"
       with_items: '{{ drone_user_filter }}'
-      when: '"credentials" in string_to_echo'
+      when: '"credentials" in lsorgscrt.stdout_lines'
 
     - name:  rm gapi token
       become: yes
@@ -337,7 +335,7 @@
         DRONE_SERVER: "https://{{ drone_server_host }}"
         DRONE_TOKEN: "{{ drone_token.stdout }}"
       with_items: '{{ drone_user_filter }}'
-      when: '"token" in string_to_echo'
+      when: '"token" in lsorgscrtst.dout_lines'
 
 
     - name:  add gapi secrets
